<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.musicplayerproject.MainActivity">
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share_menu"
        app:showAsAction="always"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings_menu"
        app:showAsAction="always"/>
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/help_menu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/expanded_menu"
        android:icon="@drawable/ic_drawer"
        android:title="@string/scan_menu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_close_black"
        android:title="@string/exit_menu"
        app:showAsAction="never"/>
</menu>
