<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicplayerproject.Artist">
    <RelativeLayout
        android:id="@+id/relative_layout_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_artist"
            style="@style/textView_header_album"
            android:text="@string/header_artists"/>
        <TextView
            android:layout_below="@+id/text_artist"
            android:id="@+id/tv_header"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_artist_detail"/>
        <ImageView
            android:layout_marginTop="@dimen/dim_four"
            android:id="@+id/image_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_header"
            android:src="@drawable/latamangeshkar"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/editText_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout_artist"
        android:hint="@string/search_menu"
        android:singleLine="true"
        android:visibility="gone"/>
    <ListView
        android:id="@+id/listView"
        style="@style/listview_style">
    </ListView>
    <LinearLayout
        android:id="@+id/linear_bottom"
        style="@style/linear_bottom">
        <Button
            android:id="@+id/btn_home"
            style="@style/button_home"/>
        <Button
            android:id="@+id/btn_search"
            style="@style/button_search"/>
        <Button
            android:id="@+id/btn_queue_music"
            style="@style/button_queue"/>
        <Button
            android:id="@+id/btn_folder"
            style="@style/button_folder"/>
        <Button
            android:id="@+id/btn_profile"
            style="@style/button_profile"/>
    </LinearLayout>
</RelativeLayout>
